--- a/new2.html
+++ b/new2.html
@@ -5,22 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style1.css">
+    <link rel="stylesheet" href="/style1.css">
 </head>
 <body>
     <h1>AI beaches</h1>
     <p>The following images are created using Bing's implementation of DALE</p>
     <div class="container">
-        <div class="image"> <img src="OIG (1).jpeg" alt="Image of a beach with ancient temple nearby">
+        <div class="image"> <img src="/OIG (1).jpeg" alt="Image of a beach with ancient temple nearby">
             <legend>Beach in Aegean Island</legend>
         </div>
-       <div class="image">  <img src="OIG.jpeg" alt="Image of a beach with ancient temple nearby">
+       <div class="image">  <img src="/OIG.jpeg" alt="Image of a beach with ancient temple nearby">
         <legend>Beach in Aegean Island</legend>
         </div>
-        <div class="image"><img src="OIG.s43J0pXWNiYHrmrGk.jpeg" alt="Image of a beach with ancient temple nearby">
+        <div class="image"><img src="/OIG.s43J0pXWNiYHrmrGk.jpeg" alt="Image of a beach with ancient temple nearby">
             <legend>Beach in Aegean Island</legend>
         </div>
-        <div class="image">    <img src="OIG.xph6dNDXt.jpeg" alt="Image of a beach with ancient temple nearby">
+        <div class="image">    <img src="/OIG.xph6dNDXt.jpeg" alt="Image of a beach with ancient temple nearby">
             <legend>Beach in Aegean Island</legend>
         </div>
     
